--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* 
+ /* 
   1. Posicionamiento
   2. Modelo de caja (Box model)
   3. Tipografia
@@ -26,4 +26,45 @@
 html{
   font-size: 62.5%;
   font-family: 'DM Sans', sans-serif;
+}
+
+header{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  min-width: 320px;
+  height: 334px;
+  text-align: center;
+  background: linear-gradient(207.8deg, #201e1c, #f7931a 100%);
+}
+
+header img{
+  height: 160px;
+  margin-top: 20px;
+}
+
+.header--title-container{
+  width: 90%;
+  min-width: 288px;
+  max-width: 900px;
+  height: 218px;
+  text-align: center;
+  align-self: center;
+}
+
+.header--title-container h1{
+  font-size: 2.4rem;
+  font-weight: bold;
+  line-height: 2.6rem;
+  color: var(--off-white);
+}
+
+.header--title-container p{
+  margin-top: 25px;
+  font-size: 1.4rem;
+  font-weight: 500;
+  line-height: 1.8rem;
+  color: var(--soft-orange);
 }
